2014-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* FaceSelection.h:
	* FaceSelection.cpp:
	* AppearanceEditor.h:
	* TextureCoordinateEditor.xml:
	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-16  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.cpp:
	* BrowserWindow.xml:
	* TextureCoordinateEditor.xml:
	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditorPreview.x3dv:
	* X3DColorPerVertexEditorInterface.cpp:
	* ColorPerVertexEditor.h:
	* X3DTextureCoordinateEditorInterface.h:
	* ColorPerVertexEditor.cpp:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-15  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.xml:
	* X3DTextureCoordinateEditorInterface.h:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-14  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-14  Holger Seelig  <holger.seelig@yahoo.de>

	* titania: 

2014-11-14  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.cpp: 

2014-11-13  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.cpp: 

2014-11-13  Holger Seelig  <holger.seelig@yahoo.de>

	* MFBool.svg:
	* TextureCoordinateEditor.xml:
	* X3DTextureCoordinateEditorInterface.h:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-13  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinate.svg: 

2014-11-13  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* DialogFactory.h:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* BrowserWindow.xml: